deployments/ingressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: addon-http-application-routing
spec:
  controller: k8s.io/ingress-nginx
