deployments/Tools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tools
  namespace: first-app-namespace
  labels:
    app: tools
spec:
  containers:
  - name: tools
    image: codefirst.azurecr.io/alpinewithtools:0.2
    command:
      - /bin/sh
      - "-c"
      - "sleep 640m"
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  imagePullSecrets:
  - name: codefirstreg
