deployments/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-app-loadbalancer
  namespace: first-app-namespace
spec:
  selector:
    app: sample-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
