deployments/SampleWebApp.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-app
  namespace: first-app-namespace
spec:
  type: NodePort
  selector:
    app: sample-web-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-app
  namespace: first-app-namespace
  labels:
    app: sample-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-web-app
  template:
    metadata:
      labels:
        app: sample-web-app
    spec:
      containers:
      - name: sample-web-app
        image: codefirst.azurecr.io/samplek8swebapp:0.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
